Code is updated

--- a/PasswordDefender/PasswordDefender.csproj
+++ b/PasswordDefender/PasswordDefender.csproj
@@ -55,7 +55,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Model\AccessController.cs" />
     <Compile Include="Model\Data.cs" />
+    <Compile Include="Model\DataManager.cs" />
     <Compile Include="Model\Decypter.cs" />
     <Compile Include="Model\Encrypter.cs" />
     <Compile Include="ViewModel.cs" />
