--- a/PasswordDefender/PasswordDefender.csproj
+++ b/PasswordDefender/PasswordDefender.csproj
@@ -58,8 +58,8 @@
     <Compile Include="Model\AccessController.cs" />
     <Compile Include="Model\Data.cs" />
     <Compile Include="Model\DataManager.cs" />
-    <Compile Include="Model\Decypter.cs" />
-    <Compile Include="Model\Encrypter.cs" />
+    <Compile Include="Model\AESCryptographer.cs" />
+    <Compile Include="Model\Сryptographer.cs" />
     <Compile Include="ViewModel.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
