--- a/PasswordDefender/PasswordDefender.csproj
+++ b/PasswordDefender/PasswordDefender.csproj
@@ -57,7 +57,7 @@
     </ApplicationDefinition>
     <Compile Include="Model\AccessController.cs" />
     <Compile Include="Model\Data.cs" />
-    <Compile Include="Model\DataManager.cs" />
+    <Compile Include="Model\DataFileManager.cs" />
     <Compile Include="Model\RijndaelCryptographer.cs" />
     <Compile Include="Model\Сryptographer.cs" />
     <Compile Include="ViewModel.cs" />
