--- a/PasswordDefender/PasswordDefender.csproj
+++ b/PasswordDefender/PasswordDefender.csproj
@@ -59,7 +59,7 @@
     <Compile Include="Model\Data.cs" />
     <Compile Include="Model\DataFileManager.cs" />
     <Compile Include="Model\RijndaelCryptographer.cs" />
-    <Compile Include="Model\Сryptographer.cs" />
+    <Compile Include="Model\Cryptographer.cs" />
     <Compile Include="ViewModel.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
