--- a/PasswordDefender/PasswordDefender.csproj
+++ b/PasswordDefender/PasswordDefender.csproj
@@ -86,11 +86,14 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Command\RelayCommand.cs" />
     <Compile Include="Model\AccessController.cs" />
     <Compile Include="Model\Data.cs" />
     <Compile Include="Model\DataFileManager.cs" />
     <Compile Include="Model\RijndaelCryptographer.cs" />
     <Compile Include="Model\Cryptographer.cs" />
+    <Compile Include="ViewModel\DataViewModel.cs" />
+    <Compile Include="ViewModel\MainViewModel.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -144,5 +147,6 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
