--- a/PasswordDefender/PasswordDefender.csproj
+++ b/PasswordDefender/PasswordDefender.csproj
@@ -92,8 +92,7 @@
     <Compile Include="Model\DataFileManager.cs" />
     <Compile Include="Model\RijndaelCryptographer.cs" />
     <Compile Include="Model\Cryptographer.cs" />
-    <Compile Include="ViewModel\DataViewModel.cs" />
-    <Compile Include="ViewModel\MainViewModel.cs" />
+    <Compile Include="MainViewModel.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
